--- a/static/compatibilities/istio.yaml
+++ b/static/compatibilities/istio.yaml
@@ -8,109 +8,129 @@ versions:
   kube: ['1.34', '1.33', '1.32', '1.31', '1.30']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 1.28.0
   images: ['docker.io/istio/pilot:1.28.0']
 - version: 1.27.0
   kube: ['1.33', '1.32', '1.31', '1.30', '1.29']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 1.27.0
   images: ['docker.io/istio/pilot:1.27.0']
 - version: 1.26.0
   kube: ['1.33', '1.32', '1.31', '1.30', '1.29']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 1.26.0
   images: ['docker.io/istio/pilot:1.26.0']
 - version: 1.25.0
   kube: ['1.32', '1.31', '1.30', '1.29']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 1.25.0
   images: ['docker.io/istio/pilot:1.25.0']
 - version: 1.24.0
   kube: ['1.31', '1.30', '1.29', '1.28']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 1.24.0
   images: ['docker.io/istio/pilot:1.24.0']
 - version: 1.23.0
   kube: ['1.30', '1.29', '1.28', '1.27']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 1.23.0
   images: ['docker.io/istio/pilot:1.23.0']
 - version: 1.22.0
   kube: ['1.30', '1.29', 1.28', '1.27']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 1.22.0
   images: ['docker.io/istio/pilot:1.22.0']
 - version: 1.21.0
   kube: ['1.29', 1.28', '1.27', '1.26']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 1.21.0
   images: ['docker.io/istio/pilot:1.21.0']
 - version: 1.20.0
   kube: ['1.28', '1.27', '1.26', '1.25']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 1.20.0
   images: ['docker.io/istio/pilot:1.20.0']
 - version: 1.18.0
   kube: ['1.27', '1.26', '1.25', '1.24']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 1.18.0
   images: ['docker.io/istio/pilot:1.18.0']
 - version: 1.17.0
   kube: ['1.26', '1.25', '1.24', '1.23']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 1.17.0
   images: ['docker.io/istio/pilot:1.17.0']
 - version: 1.16.0
   kube: ['1.25', '1.24', '1.23', '1.22']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 1.16.0
   images: ['docker.io/istio/pilot:1.16.0']
 - version: 1.14.0
   kube: ['1.24', '1.23', '1.22', '1.21']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 1.14.0
   images: ['docker.io/istio/pilot:1.14.0']
 - version: 1.13.0
   kube: ['1.23', '1.22', '1.21', '1.20']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 1.13.0
   images: ['docker.io/istio/pilot:1.13.0']
 - version: 1.12.0
   kube: ['1.22', '1.21', '1.20', '1.19']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 1.12.0
   images: ['docker.io/istio/pilot:1.12.0']
 - version: 1.11.0
   kube: ['1.22', '1.21', '1.20', '1.19', '1.18']
   requirements: []
   incompatibilities: []
+  summary: null
 - version: 1.9.0
   kube: ['1.20', '1.19', '1.18', '1.17']
   requirements: []
   incompatibilities: []
+  summary: null
 - version: 1.8.0
   kube: ['1.19', '1.18', '1.17', '1.16']
   requirements: []
   incompatibilities: []
+  summary: null
 - version: 1.7.0
   kube: ['1.18', '1.17', '1.16']
   requirements: []
   incompatibilities: []
+  summary: null
 - version: 1.1.0
   kube: ['1.21', '1.20', '1.19', '1.18']
   requirements: []
   incompatibilities: []
+  summary: null
