--- a/static/compatibilities/vitess.yaml
+++ b/static/compatibilities/vitess.yaml
@@ -6,67 +6,84 @@ versions:
   kube: ['1.34', '1.33', '1.32', '1.31']
   requirements: []
   incompatibilities: []
+  summary: null
 - version: 22.0.0
   kube: ['1.32', '1.31', '1.30']
   requirements: []
   incompatibilities: []
+  summary: null
 - version: 21.0.0
   kube: ['1.31', '1.30', '1.29']
   requirements: []
   incompatibilities: []
+  summary: null
 - version: 20.0.0
   kube: ['1.28', '1.27', '1.26', '1.25']
   requirements: []
   incompatibilities: []
+  summary: null
 - version: 19.0.0
   kube: ['1.28', '1.27', '1.26', '1.25']
   requirements: []
   incompatibilities: []
+  summary: null
 - version: 18.0.0
   kube: ['1.25', '1.24', '1.23', '1.22']
   requirements: []
   incompatibilities: []
+  summary: null
 - version: 17.0.0
   kube: ['1.25', '1.24', '1.23', '1.22']
   requirements: []
   incompatibilities: []
+  summary: null
 - version: 16.0.0
   kube: ['1.24', '1.23', '1.22']
   requirements: []
   incompatibilities: []
+  summary: null
 - version: 15.0.0
   kube: ['1.24', '1.23', '1.22']
   requirements: []
   incompatibilities: []
+  summary: null
 - version: 14.0.0
   kube: ['1.22', '1.21', '1.20']
   requirements: []
   incompatibilities: []
+  summary: null
 - version: 13.0.0
   kube: ['1.22', '1.21', '1.20']
   requirements: []
   incompatibilities: []
+  summary: null
 - version: 12.0.0
   kube: ['1.22', '1.21', '1.20', '1.19', '1.18', '1.17']
   requirements: []
   incompatibilities: []
+  summary: null
 - version: 10.0.0
   kube: ['1.17', '1.16', '1.15']
   requirements: []
   incompatibilities: []
+  summary: null
 - version: 9.0.0
   kube: ['1.17', '1.16', '1.15']
   requirements: []
   incompatibilities: []
+  summary: null
 - version: 8.0.0
   kube: ['1.17', '1.16', '1.15']
   requirements: []
   incompatibilities: []
+  summary: null
 - version: 7.0.0
   kube: ['1.17', '1.16', '1.15']
   requirements: []
   incompatibilities: []
+  summary: null
 - version: 6.0.0
   kube: ['1.15', '1.14', '1.13']
   requirements: []
   incompatibilities: []
+  summary: null
